--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -18,7 +18,7 @@
 				<img src="{{ .RelPermalink  }}" alt="">
 		</div>
 		{{- end -}}
-		<h1 class="snap"><a href="#">{{ with .Title }}{{ . }}{{ end }}</a></h1>
+		<h1 class="title snap"><a href="#">{{ with .Title }}{{ . }}{{ end }}</a></h1>
 		<header>
 			<div class="details">
 				{{ if .Params.description }}
@@ -31,7 +31,7 @@
 		{{ if ne .Params.Meta_display false -}}
 			<aside class="meta">
 				<div class="wrapper">
-					<h2>{{ (i18n "metadata") }}</h2>
+					<h2>{{ (i18n "post-details") }}</h2>
 					<dl>
 					<!-- {{ with .Params.description }}
 						<dt>{{ i18n "description" }}</dt>
@@ -39,10 +39,10 @@
 					</dd>
 					{{ end }} -->
 					{{ if .Params.dateCreated }}
-						<dt>{{ i18n "produced" }}</dt>
+						<dt>{{ i18n "created-date" }}</dt>
 							<dd>{{ .Params.dateCreated }}</dd>
 					{{ else }}
-						<dt>{{ i18n "published" }}</dt>
+						<dt>{{ i18n "publish-date" }}</dt>
 							<dd>{{- if .Params.dateCreated -}}
 									{{- .Params.dateCreated -}}
 								{{- else -}}
@@ -60,10 +60,21 @@
 						<dd class="time">{{ $yearsElapsed }} {{ i18n "notice-outdated" | safeHTML }}</dd>
 					{{ end }}
 
+					{{ with .Params.ReadDate }}
+						<dt>{{ i18n "read-date" }}</dt>
+							<dd>{{ . }}</dd>
+					{{ end }}
+
+					{{ with .Params.Rating }}
+						<dt>{{ i18n "rating" }}</dt>
+							<dd title="{{ . }}">
+								{{- range seq (int . ) }}★{{ end -}}
+							</dd>
+					{{ end }}
+
 					{{ with .Params.license }}
 						<dt>{{ i18n "license" }}</dt>
 						<dd>{{ . | markdownify }}</dd>
-					</dd>
 					{{ end }}
 
 					{{ if .Params.Tags }}
@@ -73,16 +84,59 @@
 						{{- end }}</dd>
 					{{ end }}
 					</dl>
-					{{ with .Params.Meta }}
-						{{ . | markdownify }}
-					{{ end }}
 				</div>
+
+				{{- if eq .Type "readings" -}}
+				<div class="wrapper">
+					<h2>{{ (i18n "publication-details") }}</h2>
+					<dl>
+					{{ with .Params.Publication.Title }}
+						<dt>{{ i18n "title" }}</dt>
+						<dd>
+						{{- if $.Params.Publication.URL }}<a href="{{ $.Params.Publication.URL }}">{{ end -}}
+						{{ . }}
+						{{- if $.Params.Publication.URL }}</a>{{ end -}}
+						</dd>
+					{{ end -}}
+					{{ with .Params.Publication.Subtitle }}
+						<dd>{{ . }}</dd>
+					{{ end -}}
+					{{ with .Params.Publication.Author }}
+						<dt>{{ i18n "author" }}</dt>
+						<dd>{{ . }}</dd>
+					{{ end -}}
+					{{ with .Params.Publication.Publisher }}
+						<dt>{{ i18n "publisher" }}</dt>
+						<dd>{{ . }}</dd>
+					{{ end -}}
+					{{ with .Params.Publication.Published }}
+						<dt>{{ i18n "published" }}</dt>
+						<dd>{{ . }}</dd>
+					{{ end -}}
+					{{ if .Params.Publication.ISBN }}
+						<dt>ISBN</dt>
+						{{ range .Params.Publication.ISBN -}}
+							<dd>{{ . }}</dd>
+						{{- end }}
+					{{ end -}}
+					</dl>
+				</div>
+
+				{{ end }}
+
 				{{ if ge (len .TableOfContents) 150 }}
 				<div class="wrapper">
 					<h2>{{ (i18n "contents") }}</h2>
 					{{.TableOfContents}}
 				</div>
 				{{ end }}
+
+				{{ with .Params.Meta }}
+				<div class="wrapper">
+					{{ . | markdownify }}
+				</div>
+				{{ end }}
+
 			</aside>
 		{{- end }}
 		</header>
