--- a/layouts/partials/ui.html
+++ b/layouts/partials/ui.html
@@ -1,5 +1,5 @@
 <div class="ui">
-	<a href="#start">↑</a>
+	<a href="#top">↑</a>
 	<button id="theme-toggle">☉</button>
 </div>
 <script type="text/javascript">
