--- a/layouts/partials/footer/nav.html
+++ b/layouts/partials/footer/nav.html
@@ -1,3 +1,4 @@
+{{ if ne .Site.Params.Menu_footer false }}
 <nav>
 	<ul>
 		{{- range .Site.RegularPages -}}
@@ -7,7 +8,8 @@
 		{{- end -}}
 		{{- $currentPage := . -}}
 		{{- range .Site.Menus.main -}}
-			<li><a href="{{ .URL }}">{{ .Name }}</a></li>
+			<li><a href="{{ .URL }}">{{ (i18n .Name) }}</a></li>
 		{{- end -}}
 	</ul>
 </nav>
+{{ end }}
