--- a/static/styles/screen.css
+++ b/static/styles/screen.css
@@ -22,16 +22,18 @@ global CSS variables
 	--font-interface: '';
 
 	/* layout */
+	--scrollbar-width: 2vw;
 	/*--content-width: 60ch; /* is not same for different fonts */
 	--content-width: 30rem;
-	/*--content-width: 100%;*/
-	--sidenote-width: 16rem;
+	/*--content-width: 100%;*/ /* DEBUG */
+	/*--sidenote-width: 10rem;*/
+	--sidenote-width: calc((100vw - var(--content-width))/2 - 2*var(--gutter-width));
 
 	--line-height: 1.4rem;
 	--header-height: calc(3*var(--line-height));
-	--gutter-width: 1.4rem;
 	--gutter-height: calc(1*var(--line-height));
-	--scrollbar-width: 2vw;
+	--gutter-width: 1.4rem;
+	/*--gutter-width: 0px; /* DEBUG */
 
 	/*
 		- themes to be compatble with https://github.com/hundredrabbits/Themes
@@ -305,6 +307,7 @@ figcaption,
 }
 
 body > header .description,
+body > header nav,
 body > footer {
 	font-size: 0.8rem;
 	line-height: 1.3;
@@ -316,7 +319,8 @@ pre, input, textarea {
 }
 
 aside.meta,
-.entry-content .sidenote,
+.sidenote,
+.entry-content aside,
 .footnotes,
 abbr:after, a[title*=' ']:after {
 	font-size: 0.8rem;
@@ -505,6 +509,9 @@ abbr {
 	text-decoration: none;
 	text-transform: lowercase;
 }
+	abbr[title*=' '] {
+		cursor: help;
+	}
 
 	/* the following has been incorporated in the tooltips section
 	/*	
@@ -513,9 +520,6 @@ abbr {
 
 		font-variant: initial;
 		text-transform: initial;
-	}
-	abbr[title*=' '] {
-		cursor: help;
 	}
 	abbr[title*=' ']:after {
 		content: '*';
@@ -569,6 +573,9 @@ sup {
 }
 
 
+ins, del {
+	text-decoration-thickness: 0.5px;
+}
 
 
 
@@ -814,8 +821,8 @@ body > main > * {
 }
 
 body > header {
-	margin-bottom: var(--gutter-width);
-	height: var(--header-height);
+	margin-bottom: var(--gutter-height);
+	/*height: var(--header-height);*/
 	z-index: 103;
 	opacity: 0.999; /* z-index quickfix */
 }
@@ -824,10 +831,27 @@ body > header .description {
 	display: block;
 }
 
+body > header nav,
+body > footer nav {
+	margin: var(--line-height) 0;
+}
+
+body > header nav {
+	margin-top: 0;
+}
+
+body > header nav li,
+body > footer nav li {
+	display: inline-block;
+	margin-right: 0.6rem;
+}
+
 body > main {
-	position: relative; /* causes issues with tooltips */
-	margin-bottom: 90vh;
-	padding-bottom: 5vh;
+	position: relative;
+	margin: 0 calc(-1*var(--gutter-width)) 90vh;
+	padding: 0 var(--gutter-width) 5vh;
+	min-height: 100vh;
+
 	background: inherit;
 	z-index: 100;
 }
@@ -855,17 +879,6 @@ body > footer nav ul {
 	padding: 0;
 	text-align: center;
 }
-
-body > footer nav li {
-	display: inline-block;
-	margin: 0 0.5rem;
-}
-	body > footer nav li:first-child {
-		margin-left: 0;
-	}
-	body > footer nav li:last-child {
-		margin-right: 0;
-	}
 
 
 
@@ -1007,11 +1020,12 @@ body > main:after,
 
 .hero {
 	/*margin-top: -4rem;*/
-	margin-bottom: var(--gutter-width);
+	/*margin-bottom: var(--gutter-width);*/
 
 	font-size: 0;
 }
 .hero img {
+		margin: 0;
 		width: 100%;
 		height: 100vh;
 		object-fit: cover;
@@ -1033,6 +1047,7 @@ a, a:visited {
 	color: #00f; /* fallback */
 	color: rgb(var(--hyperlink-color));
 	text-decoration: underline;
+	text-decoration-thickness: 0.5px;
 	/*text-decoration-skip-ink: auto;*/
 
 	-webkit-transition: color .3s;
@@ -1043,6 +1058,7 @@ a, a:visited {
 
 a:active {
 	text-decoration-style: wavy;
+	text-decoration-skip-ink: none;
 }
 
 /*a:before, a:after {
@@ -1053,6 +1069,10 @@ a:active {
 a:hover, a:focus, a:active {
 	color: #f00; /* fallback */
 	color: rgb(var(--accent-color));
+}
+
+nav a {
+	text-decoration: none;
 }
 
 /*--------------------------------------------------------------
@@ -1115,13 +1135,12 @@ languages selector
 	position: fixed;
 	top: var(--gutter-width);
 	right: 0;
-	/*width: var(--gutter-width);*/
 	z-index: 104;
+
+	text-align: right;
 
 	-webkit-user-select: none !important;
 	user-select        : none !important;
-
-	/*outline: 1px dashed red;*/
 }
 	.languages ul {
 		list-style: none;
@@ -1129,15 +1148,22 @@ languages selector
 
 	.languages ul li {
 		display: block;
+		margin: 0;
 
 		font-weight: bold;
+		text-align: right;
 		text-transform: uppercase;
-		text-align: center;
 	}
 
 	.languages a {
 		display: inline-block;
+		min-width: var(--gutter-width);
+		/*padding-right: 0.2rem;*/
+
+		text-align: center;
 		text-decoration: none;
+
+		/*outline: 1px dashed red;*/
 	}
 
 	.languages .active {
@@ -1199,6 +1225,8 @@ abbr[title*=' ']:hover,
 span[title*=' ']:hover {
 	text-decoration: underline;
 	text-decoration-style: wavy;
+	text-decoration-skip-ink: none;
+	text-decoration-thickness: 0.5px;
 }
 
 a[title*=' ']:after,
@@ -1210,7 +1238,6 @@ span[title*=' ']:after {
 	content: var(--tooltip-mark); 
 	display: inline-block;
 	position: absolute;
-	padding: 0 0.5em;
 	right: calc(-1*var(--gutter-width));
 	right: 0;
 	width: var(--gutter-width);
@@ -1218,6 +1245,7 @@ span[title*=' ']:after {
 	backdrop-filter: blur(var(--page-color-blur));
 	background-color: rgba(var(--page-color),var(--page-color-transparency));
 	color: rgba(var(--text-color),0.33);
+	cursor: help;
 	font-variant: initial;
 	text-align: center;
 	text-overflow: ellipsis;
@@ -1225,6 +1253,8 @@ span[title*=' ']:after {
 
 	-webkit-transition: color 0.3s;
 	transition        : color 0.3s;
+
+	/*outline: 1px dashed red;*/
 }
 
 a[title*=' ']:hover:after,
@@ -1234,6 +1264,7 @@ abbr[title*=' ']:hover:after,
 span[title*=' ']:hover:after {
 	content: attr(title);
 	padding-right: var(--gutter-width);
+	padding-left: 0.4rem;
 	margin: 0 2px;
 	width: auto;
 	z-index: 100;
@@ -1241,6 +1272,8 @@ span[title*=' ']:hover:after {
 	border: 1px solid;
 	color: rgb(var(--text-color));
 	text-align: left;
+
+	outline: 1px solid rgb(var(--page-color));
 }
 	/* wikipedia links icon */
 	a[title*=' '][href*='wikipedia.org']:after {
@@ -1429,31 +1462,34 @@ articles-list styles
 	/*outline: 1px dashed cyan;*/
 }
 
-.articles-list > .wrapper {
-	text-align: center;
-}
-
-.articles-list summary {
+.articles-list > summary {
 	margin-left: -1rem;
 }
 
-.articles-list summary::marker {
-	/*color: red !important;*/
+.articles-list[open] summary::marker {
+	color: rgb(0,0,0,0);
+	/*visibility: hidden;*/
 }
 
-.articles-list summary:focus {
+.articles-list > summary:focus {
 	outline: none;
 }
 
-.articles-list summary:focus h2 {
+.articles-list > summary:focus h2 {
 	text-decoration: underline;
+	text-decoration-style: wavy;
+	text-decoration-skip-ink: none;
 }
 
-.articles-list summary h2 {
+.articles-list > summary h2 {
 	display: inline-block;
 	margin-bottom: var(--gutter-height);
 
 	cursor: pointer;
+}
+
+.articles-list > .wrapper {
+	text-align: center;
 }
 
 .articles-list article {
@@ -1654,7 +1690,7 @@ articles-list - stack
 }
 
 .articles-list.stack article + article {
-	margin-top: calc(var(--gutter-height)/2);
+	margin-top: var(--line-height);
 }
 
 .articles-list.stack article a {
@@ -1678,7 +1714,6 @@ articles-list - stack
 	/*outline: 1px dashed red;*/
 }
 
-
 .articles-list.stack .title {
 	order: 1;
 }
@@ -1691,6 +1726,11 @@ articles-list - stack
 
 	text-overflow: ellipsis;
 	white-space: nowrap;
+}
+
+.articles-list.stack .rating {
+	order: 4;
+	color: inherit;
 }
 
 
@@ -1835,11 +1875,27 @@ articles-list - thumb ratio
 	padding-top: 100%;
 }
 
+.articles-list.thumbnail-circle article .thumbnail {
+	padding-top: 100%;
+	border-radius: 50%;
+}
+
+
 
 
 /*--------------------------------------------------------------
 single article meta styles
 --------------------------------------------------------------*/
+
+.h-entry .title {
+	padding-top: var(--gutter-height);
+}
+
+.h-entry .title,
+.h-entry .summary {
+	margin-bottom: var(--gutter-height);
+}
+
 
 .meta {
 	display: flex;
@@ -1919,61 +1975,78 @@ single article meta styles
 	padding: 0;
 }
 
-.h-entry .title,
-.h-entry .summary {
-	margin-bottom: var(--gutter-height);
-}
-
 
 /*--------------------------------------------------------------
 sidenote styles
 --------------------------------------------------------------*/
 
-.sidenote,
-.entry-content aside {
-	position: relative;
-	margin: var(--gutter-height) 0;
-	padding: calc(var(--gutter-width)/2);
-
-	border: 1.5px dashed;
-}
-
-/*.sidenote::before,
-.entry-content aside::before {
+.sidenote:before,
+.entry-content aside:before {
 	content: '⊕';
 	display: block;
 	position: absolute;
-	top: 0;
-	left: calc(-1*var(--gutter-width));
+	/*top: 0;*/
+	right: 0;
 	width: var(--gutter-width);
 
-	color: rgba(var(--text-color),1);
-	cursor: e-resize;
+	cursor: n-resize;
 	line-height: 1.2rem;
-	pointer-events: initial;
+	/*pointer-events: initial;*/
 	text-align: center;
 
 	-webkit-transition: all .3s 1.5s;
 	transition        : all .3s 1.5s;
+
+	/*outline: 1px dashed red;*/
 }
+	.sidenote:hover:before,
+	.entry-content aside:hover:before {
+
+	}
 
 .sidenote,
 .entry-content aside {
-	max-height: 3rem;
+	margin: var(--gutter-height) 0;
+	padding: calc(var(--gutter-width)/2);
+	max-height: calc(2*var(--line-height));
 	overflow: hidden;
 
-	-webkit-mask-image: -webkit-linear-gradient(top, rgba(0,0,0,1) 0, rgba(0,0,0,0) 90%);
+	-webkit-mask-image: -webkit-linear-gradient(top, rgba(0,0,0,1) 1rem, rgba(0,0,0,0) 90%);
+
+	border: 1.5px dashed black;
+	transition: max-height 0.3s ease-in;
 }
 
 .sidenote:hover,
 .entry-content aside:hover {
 	max-height: 100vh;
+	z-index: 101;
+
 	-webkit-mask-image: none;
 }
 
+
+
 @media only screen and ( min-width: 1200px ) {
-	
-}*/
+	.sidenote,
+	.entry-content aside {
+		position: absolute;
+		float: left;
+		margin-top: 0.4rem;
+		margin-left: calc(-1*var(--gutter-width));
+		padding: 0;
+		max-width: var(--content-width);
+		width: var(--sidenote-width);
+		max-height: 100%;
+		transform: translate(-100%, 0);
+
+		-webkit-mask-image: none;
+	}
+	.sidenote:before,
+	.entry-content aside:before {
+		display: none;
+	}
+}
 
 /*--------------------------------------------------------------
 footnotes
@@ -1991,7 +2064,7 @@ footnotes
 }
 
 
-.footnote-ref + .footnote-ref:before {
+.footnote-ref + .footnote-ref::before {
 	/*content: ', ';*/
 }
 
@@ -2161,16 +2234,16 @@ gallery
 
 	
 	/*box-shadow: 0.3rem 0.3rem 0.5rem -0.1rem rgba(0,0,0,.5);*/
-	box-shadow: 0 4px 8px rgba(0,0,0,0.07),
-				0 8px 16px rgba(0,0,0,0.07),
-				0 16px 32px rgba(0,0,0,0.07),
-				0 32px 64px rgba(0,0,0,0.07);
-	outline: 1px solid rgba(0,0,0,0.1);
+	box-shadow: 0 4px 8px rgba(var(--text-color),0.07),
+				0 8px 16px rgba(var(--text-color),0.07),
+				0 16px 32px rgba(var(--text-color),0.07),
+				0 32px 64px rgba(var(--text-color),0.07);
+	outline: 1px solid rgba(var(--text-color),0.1);
 
 	transform-origin: center;
 	transition: transform .3s 1s;
 
-	outline: 1px solid rgba(0,0,0,0.1);
+	outline: 1px solid rgba(var(--text-color),0.1);
 }
 
 .gallery img:hover {
@@ -2179,8 +2252,8 @@ gallery
 }
 
 .gallery .top img {
-	/*border: 1.5px solid rgba(0,0,0,1);*/
-	box-shadow: 0 4px 8px 4px rgba(0,0,0,0.5);
+	/*border: 1.5px solid rgba(var(--text-color),1);*/
+	box-shadow: 0 4px 12px 4px rgba(var(--text-color),0.5);
 	cursor: e-resize;
 
 	transform: scale(1.2);
