--- a/layouts/partials/header/inner.html
+++ b/layouts/partials/header/inner.html
@@ -2,7 +2,7 @@
 	<a href="{{ "/" | relLangURL }}">
 		<h1>
 			{{- if .Site.Params.Header }}
-				{{ .Site.Params.Header | .safeHTML }}
+				{{ .Site.Params.Header | safeHTML }}
 			{{- else -}}
 				{{ .Site.Title }}
 			{{- end -}}
